# notify

./: Dockerfile  action.yml  discord.py  pyproject.toml
.github/workflows/: test.yml
